Fix iOS layout issues
- Stop iPad map sidebar from wrapping. Fixes #877
- Remove gap from bottom of iPhone directions view. Fixes #878

--- a/src/app/styles/utils/_mixins.scss
+++ b/src/app/styles/utils/_mixins.scss
@@ -21,14 +21,14 @@
 
 @mixin sidebar-main {
     width: $sidebar-width;
-    height: calc(100vh - #{$footer-sidebar-height} - #{$directions-form-sidebar-height});
+    height: calc(100% - #{$footer-sidebar-height} - #{$directions-form-sidebar-height});
     margin: 0;
     background-color: $body-color;
     overflow: hidden;
 
     .body-has-sidebar-banner & {
         @include respond-to('xxs-up') {
-            height: calc(100vh - #{$footer-sidebar-height} - #{$directions-form-sidebar-height} - #{$sidebar-banner-height});
+            height: calc(100% - #{$footer-sidebar-height} - #{$directions-form-sidebar-height} - #{$sidebar-banner-height});
         }
     }
 }
